--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
 					<div class="work__item">
 						<div class="work__img">
-							<a href="https://ru.wikipedia.org/wiki/JavaScript"><img src="images/logo-javascript.svg." width="250px" height="200px" ></a>
+							<a href="https://ru.wikipedia.org/wiki/JavaScript"><img src="images/logo-javascript.svg" width="250px" height="200px" ></a>
 						</div>
 					</div>
 
