--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
 					<div class="work__item">
 						<div class="work__img">
-							<a href="https://github.com/d-pov/1st_blog.github.io"><img src="images/logo-javascript.svg" width="300px" height="300px" class="work__img__inner">
+							<a href="https://github.com/d-pov/1st_blog.github.io"><img src="images/js_git.jpg" width="300px" height="300px" class="work__img__inner">
 							<h3>JS Scripts</h3>
 							<p>Web Development</p></a>
 						</div>
